--- a/sass/utils/acordion.scss
+++ b/sass/utils/acordion.scss
@@ -74,6 +74,7 @@ $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w
   --a_accordion_body_padding_y: #{$accordion-body-padding-y};
   --a_accordion_active_color: #{$accordion-button-active-color};
   --a_accordion_active_bg: #{$accordion-button-active-bg};
+  --a_accordion_with_gap_margin_bottom: 1rem;
 
   font-size: #{ $accordion-font-size };
 }
@@ -173,17 +174,16 @@ $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w
   display: block;
 }
 
-.#{$aloha-prefix}accordion__with_gap {
-  --a_accordion_with_gap_margin_bottom: 1rem;
-  .#{$aloha-prefix}accordion__item {
-    margin-bottom: var(--a_accordion_with_gap_margin_bottom);
-    border: var(--a_accordion_border_width) solid var(--a_accordion_border_color);
-    border-radius: var(--a_accordion_border_radius);
-  }
-  .#{$aloha-prefix}accordion__button {
-    border-radius: var(--a_accordion_border_radius) var(--a_accordion_border_radius) 0 0;
-  }
-  .#{$aloha-prefix}accordion__button_collapsed {
+// Gap
+.#{$aloha-prefix}accordion__item_with_gap {
+  margin-bottom: var(--a_accordion_with_gap_margin_bottom);
+  border: var(--a_accordion_border_width) solid var(--a_accordion_border_color);
+  border-radius: var(--a_accordion_border_radius);
+}
+.#{$aloha-prefix}accordion__button_with_gap {
+  border-radius: var(--a_accordion_border_radius) var(--a_accordion_border_radius) 0 0;
+  &.#{$aloha-prefix}accordion__button_collapsed {
     border-radius: var(--a_accordion_border_radius);
   }
 }
+
